force-app/main/default/objects/Error_Log__c/Error_Log__c.object-meta.xml
<CustomObject>
    <description>Logs errors, exceptions, messages, supports debugging.</description>
    <label>Error Log</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>