force-app/main/default/objects/Error_Log__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <defaultValue>&apos;No data&apos;</defaultValue>
    <description>The description of process breakpoint.</description>
    <label>Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>