force-app/main/default/objects/Error_Log__c/fields/Process_Name__c.field-meta.xml
<CustomField>
    <fullName>Process_Name__c</fullName>
    <defaultValue>&apos;No data&apos;</defaultValue>
    <description>The process where message was logged.</description>
    <label>Process Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>