force-app/main/default/objects/Error_Log__c/fields/Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>Stack_Trace__c</fullName>
    <description>The stack trace of threw exception or error.</description>
    <label>Stack Trace</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>