force-app/main/default/objects/Error_Log__c/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <description>The timestamp of process breakpoint.</description>
    <label>Timestamp</label>
    <type>DateTime</type>
</CustomField>