force-app/main/default/objects/Error_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Timestamp__c</columns>
    <columns>Process_Name__c</columns>
    <columns>Message__c</columns>
    <columns>Stack_Trace__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>